implementation of buildings on UITest map